fix: fix flicker time

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,17 @@ p {
   color: white;
 }
 
+.minutes {
+  color: bisque;
+  font-size: 23px;
+  font-weight: bolder;
+  padding-bottom: 2px;
+  padding-left: 0px;
+  padding-top: 5px;
+  position: relative;
+  display: inline;
+}
+
 .city-input {
   background-color: var(--bg-grey-tile);
   color: white;
